== Affiliates - Changelog ==

= 2.17.0 =
* Added a new Traffic section with URI stats.
* Source URIs and landing URIs are stored for hits on affiliate links.
* User agents are stored for hits on affiliate links.
* Hit stats now show user agents in the Visits & Referrals section.
* Hit stats now show user agents in the Affiliates & Referrals section.
* Added hit references for referrals.
* Improved request handling to exclude during AJAX.

= 2.16.7 =
* Changing the username related to an affiliate if the username doesn't exist shows an error.
* Added notifications when add/edit/remove affiliates from the dashboard.

= 2.16.6 =
* Totals : allow to filter by affiliate status.
* WordPress 4.7 compatibility tested.

= 2.16.5 =
* Rendering amounts more consistently in dashboard widget.
* Updated some Italian translations.

= 2.16.4 =
* Fixed an issue with the WooCommerce customer registration option.

= 2.16.3 =
* Updated the French translation.

= 2.16.2 =
* Updated the German translation.
* Updated the Spanish translation.
* Fixed wording in notifications.

= 2.16.1 =
* Updated pot and translation files.
* Updated the Spanish translation.

= 2.16.0 =
* Added the possibility to approve new affiliates with a status option.
* Added a Notifications section where you can enable to notify administrator and affiliates on registration.

= 2.15.12 =
* Updated the flot library to version 0.8.3.
* Improved the graph tooltip position to be displayed within bounds.
* Updated Settings tabs according to the WordPress appearance.

= 2.15.11 =
* Fixed the affiliates_is_not_referred shortcode. Now when Direct referrals is enabled, the content is not displayed.

= 2.15.10 =
* Altered the hits table definition for MySQL 5.7.3 compatibility, see https://dev.mysql.com/doc/relnotes/mysql/5.7/en/news-5-7-3.html

= 2.15.9 =
* Added filters: 'affiliates_thanks_sign_up_text' and 'affiliates_check_confirmation_text' on registration form.